# strata-common

./: .taplo.toml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  release.yml  security.yml  unit.yml  zizmor.yml
crates/btc-types/: Cargo.toml  build.rs
crates/btc-types/src/: btc.rs  convert.rs  errors.rs  genesis.rs  lib.rs  params.rs  payload.rs  test_helpers.rs
crates/btc-types/ssz/: btc.ssz
crates/codec/: Cargo.toml  README.md
crates/codec-derive/: Cargo.toml  README.md
crates/codec-derive/examples/: basic_usage.rs
crates/codec-derive/src/: lib.rs
crates/codec-derive/tests/: derive_test.rs
crates/codec-tests/: Cargo.toml
crates/codec-tests/src/: lib.rs
crates/codec-tests/tests/: basic_types.rs  complex_types.rs  consumer_example.rs  derive_macro.rs  unused_deps.rs
crates/codec-utils/src/: borsh_shim.rs  ssz_shim.rs
crates/codec/proptest-regressions/: proptest_example.txt  tests.txt
crates/codec/src/: buf_decoder.rs  errors.rs  lib.rs  macros.rs  tests.rs  types.rs  util.rs  varint.rs  varint_vec.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/src/: hash.rs  lib.rs  schnorr.rs
crates/crypto/src/keys/: compressed.rs  constants.rs  even.rs  mod.rs  zeroizable.rs
crates/crypto/src/musig2/: mod.rs
crates/crypto/src/test_utils/: mod.rs  schnorr.rs
crates/crypto/src/threshold_signature/: mod.rs
crates/crypto/src/threshold_signature/indexed/: config.rs  errors.rs  mod.rs  signature.rs
crates/crypto/src/threshold_signature/indexed/verification/: ecdsa.rs
crates/crypto/ssz/: threshold.ssz
crates/db-macros/: Cargo.toml  README.md
crates/db-macros/src/: expand.rs  lib.rs
crates/db-macros/tests/: instrumentation.rs  proxy.rs
crates/identifiers/: Cargo.toml
crates/identifiers/src/: acct.rs  buf.rs  epoch.rs  exec.rs  l1.rs  lib.rs  ol.rs
crates/identifiers/src/macros/: buf.rs  mod.rs  ssz.rs  wrapper.rs
crates/l1/tx-parser/: Cargo.toml
crates/l1/tx-parser/src/: lib.rs  sps_50.rs  types.rs
crates/l1proto/: README.md
crates/l1proto/commit-reveal/: Cargo.toml
crates/l1proto/commit-reveal/src/: builder.rs  errors.rs  lib.rs  parser.rs  test_utils.rs
crates/l1proto/envelope-fmt/: Cargo.toml
crates/l1proto/envelope-fmt/src/: builder.rs  errors.rs  lib.rs  parser.rs
crates/l1proto/txfmt/: Cargo.toml
crates/l1proto/txfmt/src/: arbitrary.rs  borsh.rs  consts.rs  error.rs  lib.rs  magic.rs  serde.rs  tag.rs  types.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs  manager.rs  metrics_layer.rs  service.rs  tests.rs  types.rs
crates/merkle/: Cargo.toml  build.rs
crates/merkle-store/: Cargo.toml
crates/merkle-store/src/: algorithm.rs  error.rs  index.rs  lib.rs  memory.rs  store.rs
crates/merkle/benches/: mmr_comparison.rs
crates/merkle/proptest-regressions/: codec_impl.txt
crates/merkle/src/: borsh_impl.rs  codec_impl.rs  ext.rs  hasher.rs  legacy_compact_mmr.rs  lib.rs  mmr.rs  new_mmr.rs  new_state.rs  proof.rs  serde_impl.rs  state.rs  traits.rs  tree.rs
crates/merkle/src/node_store/: algorithm.rs  error.rs  index.rs  memory.rs  mod.rs  store.rs
crates/merkle/ssz/: mmr.ssz  proof.ssz
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  manager.rs  metrics_layer.rs  tests.rs  types.rs
crates/mmr/: Cargo.toml
crates/mmr/src/: borsh_impl.rs  codec_impl.rs  error.rs  hasher.rs  lib.rs  mmr.rs  proof.rs  serde_impl.rs  tree.rs
crates/msg-fmt/: Cargo.toml
crates/msg-fmt/src/: lib.rs
crates/ol-logs/: Cargo.toml  build.rs
crates/ol-logs/src/: envelope.rs  lib.rs  log.rs  payloads.rs
crates/ol-logs/ssz/: log.ssz
crates/predicate/: Cargo.toml  build.rs
crates/predicate/src/: arbitrary.rs  borsh.rs  constants.rs  errors.rs  key.rs  lib.rs  serde.rs  test_utils.rs  type_ids.rs  verifier.rs
crates/predicate/src/verifiers/: mod.rs  schnorr.rs  sp1_groth16.rs  verifier_type.rs
crates/predicate/ssz/: key.ssz
crates/retry/: Cargo.toml
crates/retry/src/: config.rs  lib.rs  policies.rs
crates/rkyv-utils/: Cargo.toml
crates/rkyv-utils/src/: codec_shims.rs  lib.rs  raw_vec.rs  rk.rs  ssz_shims.rs
crates/rpc-tracing/: Cargo.toml  README.md
crates/rpc-tracing/src/: client.rs  context.rs  lib.rs  server.rs  transport.rs
crates/rpc-tracing/tests/: http_correlation.rs  websocket_correlation.rs
crates/rpc-tracing/tests/support/: mod.rs
crates/serde-utils/: Cargo.toml
crates/serde-utils/src/: codec_shim.rs  common.rs  lib.rs  ssz_shim.rs
crates/service/: Cargo.toml
crates/service/src/: adapters.rs  async_worker.rs  builder.rs  command.rs  errors.rs  executor.rs  instrumentation.rs  lib.rs  status.rs  sync_worker.rs  types.rs
crates/service/src/adapters/: async_sync.rs  dumb_ticking.rs  iter.rs  mod.rs  mpsc.rs  select.rs  stream.rs  sync_async.rs  ticking.rs  vec.rs  watch.rs
crates/ssz-tests/: Cargo.toml
crates/ssz-tests/src/: lib.rs
crates/tasks/src/: manager.rs  pending_tasks.rs  shutdown.rs
src/: lib.rs
