[workspace]
members = [
  "crates/codec",
  "crates/codec-derive",
  "crates/codec-tests",
  "crates/l1proto/envelope-fmt",
  "crates/l1proto/txfmt",
  "crates/merkle",
  "crates/msg-fmt",
  "crates/predicate",
  "crates/service",
  "crates/tasks",
]

resolver = "3"

[workspace.dependencies]
strata-codec = { path = "crates/codec" }
strata-codec-derive = { path = "crates/codec-derive" }
strata-codec-tests = { path = "crates/codec-tests" }
strata-l1-txfmt = { path = "crates/l1proto/txfmt" }
strata-merkle = { path = "crates/merkle" }
strata-msg-fmt = { path = "crates/msg-fmt" }
strata-predicate = { path = "crates/predicate" }
strata-service = { path = "crates/services" }
strata-tasks = { path = "crates/tasks" }

# SSZ dependencies
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.9.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen",  tag = "v0.9.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.9.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.9.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.9.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.9.0" }

# External dependencies
anyhow = "1"
arbitrary = { version = "1.4", features = ["derive"] }
bitcoin = { version = "0.32.6" }
borsh = { version = "1.5.0", features = ["derive"] }
digest = "0.10"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
proptest = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"

[profile.release]
opt-level = 3     # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "unwind"  # Graceful shutdown even on panic
strip = "symbols" # Strip symbols from binary
