[package]
name = "strata-codec-tests"
version = "0.1.0"
edition = "2024"
description = "Property testing macros and utilities for strata-codec"

[dependencies]
strata-codec = { path = "../codec", features = ["derive"] }
strata-codec-derive = { path = "../codec-derive" }

paste = "1.0"
proptest.workspace = true

[lints]
workspace = true
