[package]
name = "strata-codec"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Special purpose binary encoding framework"

[dependencies]
strata-codec-derive = { path = "../codec-derive", optional = true }
thiserror.workspace = true

[features]
default = []
derive = ["strata-codec-derive"]

[dev-dependencies]

[lints]
workspace = true
