[package]
edition = "2024"
name = "strata-crypto"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-identifiers.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
hex.workspace = true
musig2.workspace = true
rand = { workspace = true, optional = true }
secp256k1 = { workspace = true, features = ["global-context", "recovery"] }
serde.workspace = true
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
zeroize.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
bitcoin.workspace = true
proptest.workspace = true
rand.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
serde_json.workspace = true
strata-ssz-tests.workspace = true

[features]
default = []
test-utils = ["dep:rand"]
