[package]
name = "strata-merkle"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
digest.workspace = true
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
strata-codec = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["codec"]
codec = ["dep:strata-codec"]
