[package]
name = "strata-merkle"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
borsh = { workspace = true, optional = true }
digest.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
strata-codec = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["borsh", "codec", "serde"]
borsh = ["dep:borsh"]
codec = ["dep:strata-codec"]
serde = ["dep:serde", "dep:serde_json"]
