[package]
name = "strata-merkle"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
borsh = { workspace = true, optional = true }
digest.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
sha2.workspace = true
ssz = { workspace = true, optional = true }
ssz_derive = { workspace = true, optional = true }
ssz_primitives = { workspace = true, optional = true }
ssz_types = { workspace = true, optional = true }
strata-codec = { workspace = true, optional = true }
thiserror.workspace = true
tree_hash = { workspace = true, optional = true }
tree_hash_derive = { workspace = true, optional = true }

[build-dependencies]
ssz_codegen = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = ["borsh", "codec", "serde"]
borsh = ["dep:borsh"]
codec = ["dep:strata-codec"]
serde = ["dep:serde"]
ssz = [
  "dep:ssz",
  "dep:ssz_derive",
  "dep:ssz_primitives",
  "dep:ssz_types",
  "dep:tree_hash",
  "dep:tree_hash_derive",
  "dep:ssz_codegen",
]
