[package]
edition = "2024"
name = "strata-metrics"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
metrics.workspace = true
metrics-exporter-otel.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
