[package]
edition = "2024"
name = "strata-metrics"
version = "0.1.0"

[lints]
workspace = true

[features]
default = ["otlp", "prometheus"]
otlp = [
  "dep:metrics-exporter-otel",
  "dep:metrics-util",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
]
prometheus = ["dep:metrics-exporter-prometheus", "dep:metrics-util"]

[dependencies]
metrics.workspace = true
metrics-exporter-otel = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
metrics-util = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
