[package]
name = "strata-predicate"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", rev = "2b132ff7ed1356424df31fa36551ed31051b8530", features = [
    "borsh",
], optional = true }

arbitrary = { workspace = true, optional = true, features = ["derive"] }
borsh = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
k256 = { version = "0.13.4", features = ["schnorr"], optional = true }
serde = { workspace = true, optional = true }
signature = { version = "2.2", optional = true }

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
bincode.workspace = true
hex.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
sp1-verifier = "6.1.0"
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", rev = "2b132ff7ed1356424df31fa36551ed31051b8530" }

[features]
default = ["serde", "borsh"]
serde = ["dep:serde", "dep:hex"]
borsh = ["dep:borsh"]
arbitrary = ["dep:arbitrary"]
schnorr = ["dep:k256", "dep:signature"]
sp1-groth16 = ["dep:zkaleido-sp1-groth16-verifier", "dep:borsh"]
all = ["schnorr", "sp1-groth16"]
