[package]
name = "strata-predicate"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
zkaleido-sp1-groth16-verifier = { workspace = true, features = [
  "borsh",
], optional = true }

arbitrary = { workspace = true, optional = true, features = ["derive"] }
borsh = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
k256 = { version = "0.13.4", features = ["schnorr"], optional = true }
serde = { workspace = true, optional = true }
signature = { version = "3.0", optional = true }

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
bincode.workspace = true
hex.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
sp1-verifier = "6.1.0"
zkaleido.workspace = true

[features]
default = ["all-verifiers"]
all-verifiers = ["schnorr", "sp1-groth16"]
arbitrary = ["dep:arbitrary"]
borsh = ["dep:borsh"]
schnorr = ["dep:k256", "dep:signature"]
serde = ["dep:serde", "dep:hex"]
sp1-groth16 = ["dep:zkaleido-sp1-groth16-verifier"]
