[package]
edition = "2021"
name = "strata-retry"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
serde.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
