[package]
name = "strata-rkyv-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-codec = { workspace = true, optional = true }

rkyv = { workspace = true, features = ["alloc", "bytecheck"] }
ssz = { workspace = true, optional = true }
ssz_derive = { workspace = true, optional = true }

[lints]
workspace = true

[features]
ssz = ["dep:ssz", "dep:ssz_derive"]
codec = ["dep:strata-codec"]
