[package]
name = "strata-rkyv-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-codec = { workspace = true, optional = true }

# The `unaligned` rkyv feature is selected through this crate's own `unaligned`
# feature (see `[features]` below), not hard-enabled here.  `unaligned` makes
# archived multibyte primitives alignment-1 so the archived format imposes no
# buffer-alignment requirement; without it (the `aligned` mode) rkyv's native
# format needs the backing buffer aligned (e.g. 8 for a `u64`), which plain
# `Vec<u8>` / `Box<[u8]>` allocations don't guarantee.
rkyv = { workspace = true, features = ["alloc", "bytecheck"] }
rkyv_impl = { workspace = true, optional = true }
ssz = { workspace = true, optional = true }

[dev-dependencies]
# Only used by the `ssz` feature's tests for the `Encode`/`Decode` derives.
ssz_derive = { workspace = true }

[lints]
workspace = true

[features]
# Alignment mode.  Exactly one of `aligned` / `unaligned` must be enabled; there
# is intentionally no `default` so consumers make the choice explicit (see the
# `compile_error!` guards in `lib.rs`).
#
# - `aligned`   selects rkyv's native archived format (cheaper in-guest reads,
#               but the backing buffer must be aligned).  It enables no rkyv
#               feature — "aligned" is simply the absence of `unaligned`.
# - `unaligned` makes archived multibyte primitives alignment-1, so the archived
#               value can live zero-copy in any plain `Vec<u8>` / `Box<[u8]>`.
aligned = []
unaligned = ["rkyv/unaligned"]
ssz = ["dep:ssz", "dep:rkyv_impl"]
codec = ["dep:strata-codec", "strata-codec/derive", "dep:rkyv_impl"]
