[package]
name = "strata-serde-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
hex.workspace = true
serde.workspace = true
ssz.workspace = true
strata-codec.workspace = true

arbitrary = { workspace = true, optional = true }

[dev-dependencies]
ciborium.workspace = true
serde_json.workspace = true
ssz_derive.workspace = true

[features]
default = ["arbitrary"]
arbitrary = ["dep:arbitrary"]

[lints]
workspace = true
