[package]
name = "strata-l1-txfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin.workspace = true
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[features]
default = ["serde", "borsh"]
serde = ["dep:serde"]
borsh = ["dep:borsh"]
